--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.525.0",
+    "marked": "^16.1.1",
     "next": "15.4.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-markdown": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
