--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint" 
   },
   "dependencies": {
     "@react-spring/web": "^10.0.1",
@@ -15,6 +16,7 @@
     "lucide-react": "^0.525.0",
     "marked": "^16.1.1",
     "next": "15.4.1",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-markdown": "^10.1.0"
